--- a/css/contact.css
+++ b/css/contact.css
@@ -5,13 +5,14 @@ body{
   text-align: center;
   position: relative;
   width: 75%;
-  margin: 0 auto;
+  margin: 60px auto 0 auto;
   font-family: 'Abel', sans-serif;
   color: #4d4d4d;
+
 }
 .wrapper2{
   position: relative;
-  top: 175px;
+  top: 130px;
 }
 #form1 ul{
   width: 70%;
